blockstorage/elasticsearch/es-data-stateful.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: es-data
  namespace: moderngaming-live-proj-logging
  labels:
    app: elasticsearch
    role: data
spec:
  serviceName: elasticsearch-data
  replicas: 3
  selector:
    matchLabels:
      app: elasticsearch
      role: data
  template:
    metadata:
      labels:
        app: elasticsearch
        role: data
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - topologyKey: kubernetes.io/hostname
            labelSelector:
              matchExpressions:
              - key: role
                operator: In
                values:
                - data
      containers:
      - name: es-data
        image: quay.io/pires/docker-elasticsearch-kubernetes:6.3.0
        resources:
          limits:
            cpu: "1.5"
            memory: 5Gi
          requests:
            cpu: 250m
            memory: 1024Mi
        ports:
        - containerPort: 9300
          name: transport
        livenessProbe:
          tcpSocket:
            port: transport
          initialDelaySeconds: 35
          periodSeconds: 10
        volumeMounts:
        - name: storage
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: storage
    spec:
      storageClassName: rook-blk-r1-s2
      accessModes: [ ReadWriteOnce ]
      resources:
        requests:
          storage: 75Gi
