blockstorage/elasticsearch/es-data-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-data
  namespace: zerbytes-live-proj-logging
  labels:
    app: elasticsearch
    role: data
spec:
  ports:
  - port: 9300
    name: transport
  clusterIP: None
  selector:
    app: elasticsearch
    role: data
